make sure package on hdd and usb mounts get updated running unattended upgrade.

--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -67,9 +67,15 @@ case $ret in
 		/sbin/reboot
 		;;
 	42)
-		# bind the console (when available)
-# 		[ -f /sys/class/vtconsole/vtcon1/bind ] && echo 1 > /sys/class/vtconsole/vtcon1/bind
-		opkg upgrade 2>&1 | tee /home/root/ipkgupgrade.log
+		if [ -f /media/hdd/var/lib/opkg/status -a -f /media/usb/var/lib/opkg/status ]; then
+			opkg --add-dest /:/ --add-dest /media/hdd:/media/hdd --add-dest /media/usb:/media/usb upgrade 2>&1 | tee /home/root/ipkgupgrade.log
+		elif [ -f /media/hdd/var/lib/opkg/status ]; then
+			opkg --add-dest /:/ --add-dest /media/hdd:/media/hdd upgrade 2>&1 | tee /home/root/ipkgupgrade.log
+		elif [ -f /media/usb/var/lib/opkg/status ]; then
+			opkg --add-dest /:/ --add-dest /media/usb:/media/usb upgrade 2>&1 | tee /home/root/ipkgupgrade.log
+		else
+			opkg upgrade 2>&1 | tee /home/root/ipkgupgrade.log
+		fi
 		/sbin/reboot
 		;;
 	*)
