--- a/data/skin_default/icons/Makefile.am
+++ b/data/skin_default/icons/Makefile.am
@@ -2,6 +2,7 @@ installdir = $(pkgdatadir)/skin_default/icons
 
 dist_install_DATA = \
 	ask.png \
+	az.png \
 	clock.png \
 	dish.png \
 	dish_scan.png \
@@ -48,6 +49,8 @@ dist_install_DATA = \
 	movie_play.png \
 	movie_play_rec.png \
 	movielist.png \
+	newtop.png \
+	oldtop.png \
 	part_0_4.png \
 	part_1_4.png \
 	part_2_4.png \
@@ -80,8 +83,10 @@ dist_install_DATA = \
 	scan-s.png \
 	scan-t.png \
 	selectioncross.png \
+	shuffle.png \
 	timer_done.png  timer_prep.png  timer_rep.png   timer_zap.png \
 	timer_off.png   timer_rec.png   timer_wait.png \
 	trashcan.png \
 	unlock.png \
-	unlockBouquet.png
+	unlockBouquet.png \
+	za.png
