configure.ac: restructure DREAMBOX conditionals

--- a/configure.ac
+++ b/configure.ac
@@ -50,13 +50,10 @@ AC_ARG_WITH(boxtype,
 AC_SUBST(BOXTYPE)
 AC_DEFINE_UNQUOTED(BOXTYPE,"$BOXTYPE",[box type])
 
+AM_CONDITIONAL(DREAMBOX, test `echo "$BOXTYPE" | cut -b 1-2` == "dm")
+AM_CONDITIONAL(HAVE_TEMPFANCONTROL, test "$BOXTYPE" == dm8000 -o "$BOXTYPE" == dm800se -o "$BOXTYPE" == dm500hd)
 if test `echo "$BOXTYPE" | cut -b 1-2` == "dm"; then
-	AM_CONDITIONAL(DREAMBOX, 1)
 	AC_DEFINE(DREAMBOX, 1, [Dreambox hardware])
-	AM_CONDITIONAL(HAVE_TEMPFANCONTROL, test "$BOXTYPE" == dm8000 -o "$BOXTYPE" == dm800se -o "$BOXTYPE" == dm500hd)
-else
-	AM_CONDITIONAL(DREAMBOX, 0)
-	AM_CONDITIONAL(HAVE_TEMPFANCONTROL, 0)
 fi
 
 AC_ARG_WITH(textlcd,
