--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS = include lib main data po tools
 ACLOCAL_AMFLAGS = -I m4
 
 installdir = $(pkglibdir)/python
-install_PYTHON = uprade.py \
+install_PYTHON = upgrade.py \
 	Navigation.py NavigationInstance.py RecordTimer.py SleepTimer.py ServiceReference.py \
 	keyids.py keymapparser.py mytest.py skin.py timer.py GlobalActions.py \
 	e2reactor.py
