--- a/configure.ac
+++ b/configure.ac
@@ -215,7 +215,8 @@ data/fonts/Makefile
 data/countries/Makefile
 data/extensions/Makefile
 data/keymaps/Makefile
-data/lcd/Makefile
+data/lcd_large/Makefile
+data/lcd_small/Makefile
 data/rc_models/Makefile
 data/rc_models/et6x00/Makefile
 data/rc_models/et9500/Makefile
