add missing lcd files to make file.

--- a/data/lcd_large/Makefile.am
+++ b/data/lcd_large/Makefile.am
@@ -1,7 +1,8 @@
 installdir = $(pkgdatadir)/lcd
 
 dist_install_DATA = \
-	update.png \
+	update_unstable.png \
+	update_stable.png \
 	txt.png \
 	tuner-d.png \
 	tuner-d-act.png \
