added some plugins

--- a/configure.ac
+++ b/configure.ac
@@ -251,6 +251,10 @@ lib/python/Plugins/DemoPlugins/TestPlugin/Makefile
 lib/python/Plugins/Extensions/Makefile
 lib/python/Plugins/Extensions/CutListEditor/Makefile
 lib/python/Plugins/Extensions/CutListEditor/meta/Makefile
+lib/python/Plugins/Extensions/DLNABrowser/Makefile
+lib/python/Plugins/Extensions/DLNABrowser/meta/Makefile
+lib/python/Plugins/Extensions/DLNAServer/Makefile
+lib/python/Plugins/Extensions/DLNAServer/meta/Makefile
 lib/python/Plugins/Extensions/DVDBurn/Makefile
 lib/python/Plugins/Extensions/DVDBurn/meta/Makefile
 lib/python/Plugins/Extensions/DVDPlayer/Makefile
@@ -291,12 +295,28 @@ lib/python/Plugins/Extensions/SocketMMI/meta/Makefile
 lib/python/Plugins/Extensions/SocketMMI/src/Makefile
 lib/python/Plugins/Extensions/TuxboxPlugins/Makefile
 lib/python/Plugins/Extensions/TuxboxPlugins/meta/Makefile
+lib/python/Plugins/PLi/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/ru/LC_MESSAGES/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/ru/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/pl/LC_MESSAGES/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/pl/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/sl/LC_MESSAGES/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/sl/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/cs/LC_MESSAGES/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/cs/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/de/LC_MESSAGES/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/de/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/nl/LC_MESSAGES/Makefile
+lib/python/Plugins/PLi/SoftcamSetup/locale/nl/Makefile
 lib/python/Plugins/SystemPlugins/CableScan/Makefile
 lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/Makefile
 lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/meta/Makefile
 lib/python/Plugins/SystemPlugins/ConfigurationBackup/Makefile
 lib/python/Plugins/SystemPlugins/DefaultServicesScanner/Makefile
 lib/python/Plugins/SystemPlugins/DefaultServicesScanner/meta/Makefile
+lib/python/Plugins/SystemPlugins/DeviceManager/Makefile
 lib/python/Plugins/SystemPlugins/DiseqcTester/Makefile
 lib/python/Plugins/SystemPlugins/DiseqcTester/meta/Makefile
 lib/python/Plugins/SystemPlugins/FastScan/Makefile
@@ -312,14 +332,19 @@ lib/python/Plugins/SystemPlugins/NetworkWizard/Makefile
 lib/python/Plugins/SystemPlugins/NetworkWizard/meta/Makefile
 lib/python/Plugins/SystemPlugins/NFIFlash/Makefile
 lib/python/Plugins/SystemPlugins/NFIFlash/meta/Makefile
+lib/python/Plugins/SystemPlugins/OSD3DSetup/Makefile
 lib/python/Plugins/SystemPlugins/PositionerSetup/Makefile
 lib/python/Plugins/SystemPlugins/PositionerSetup/meta/Makefile
 lib/python/Plugins/SystemPlugins/SatelliteEquipmentControl/Makefile
 lib/python/Plugins/SystemPlugins/SatelliteEquipmentControl/meta/Makefile
 lib/python/Plugins/SystemPlugins/Satfinder/Makefile
 lib/python/Plugins/SystemPlugins/Satfinder/meta/Makefile
+lib/python/Plugins/SystemPlugins/SkinSelector/Makefile
+lib/python/Plugins/SystemPlugins/SkinSelector/meta/Makefile
 lib/python/Plugins/SystemPlugins/SoftwareManager/Makefile
 lib/python/Plugins/SystemPlugins/SoftwareManager/meta/Makefile
+lib/python/Plugins/SystemPlugins/SwapManager/Makefile
+lib/python/Plugins/SystemPlugins/VFDGiga/Makefile
 lib/python/Plugins/SystemPlugins/VideoClippingSetup/Makefile
 lib/python/Plugins/SystemPlugins/VideoEnhancement/Makefile
 lib/python/Plugins/SystemPlugins/VideoEnhancement/meta/Makefile
@@ -327,6 +352,8 @@ lib/python/Plugins/SystemPlugins/VideoTune/Makefile
 lib/python/Plugins/SystemPlugins/VideoTune/meta/Makefile
 lib/python/Plugins/SystemPlugins/Videomode/Makefile
 lib/python/Plugins/SystemPlugins/Videomode/meta/Makefile
+lib/python/Plugins/SystemPlugins/WirelessAccessPoint/Makefile
+lib/python/Plugins/SystemPlugins/WirelessAccessPoint/meta/Makefile
 lib/python/Plugins/SystemPlugins/WirelessLan/Makefile
 lib/python/Plugins/SystemPlugins/WirelessLan/meta/Makefile
 lib/python/Tools/Makefile
