--- a/lib/python/Components/Renderer/Makefile.am
+++ b/lib/python/Components/Renderer/Makefile.am
@@ -3,4 +3,11 @@ installdir = $(pkglibdir)/python/Components/Renderer
 install_PYTHON = \
 	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
 	FixedLabel.py PositionGauge.py Canvas.py Picon.py LcdPicon.py Pig.py \
-	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py PiconBg.py
+	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py PiconBg.py \
+	DMCHDCaids.py DMCHDChNumber.py DMCHDMaxTemp.py ElgatoGP3volumeText.py \
+	MaxTempNobile.py nanoNextEvent.py NextEvent.py Picon_Next.py \
+	PiconProv.py Picon_Prov.py Picon_Ref.py Picon_Sat.py PiconSatTV.py \
+	RendVolumeTextNobile.py SingleEpgListNobile.py SingleEpgList.py \
+	valioCAD.py valioChannel.py valioChSelTitle.py valioNextEvent.py \
+	valioOledInfo.py valioPosition.py valioSystem.py valioTranslator.py \
+	valioVolumeText.py VWatches.py WatchesB.py WatchesNobile.py Watchew.py
