--- a/configure.ac
+++ b/configure.ac
@@ -293,8 +293,14 @@ lib/python/Plugins/Extensions/PicturePlayer/data/Makefile
 lib/python/Plugins/Extensions/SocketMMI/Makefile
 lib/python/Plugins/Extensions/SocketMMI/meta/Makefile
 lib/python/Plugins/Extensions/SocketMMI/src/Makefile
+lib/python/Plugins/Extensions/StreamTV/Makefile
+lib/python/Plugins/Extensions/StreamTV/meta/Makefile
+lib/python/Plugins/Extensions/StreamTV/icons/Makefile
 lib/python/Plugins/Extensions/TuxboxPlugins/Makefile
 lib/python/Plugins/Extensions/TuxboxPlugins/meta/Makefile
+lib/python/Plugins/Extensions/WebBrowser/Makefile
+lib/python/Plugins/Extensions/WebBrowser/meta/Makefile
+lib/python/Plugins/Extensions/WebBrowser/keymap/Makefile
 lib/python/Plugins/PLi/Makefile
 lib/python/Plugins/PLi/SoftcamSetup/Makefile
 lib/python/Plugins/PLi/SoftcamSetup/locale/ru/LC_MESSAGES/Makefile
