[skin] default skin update.

--- a/data/skin_default/icons/Makefile.am
+++ b/data/skin_default/icons/Makefile.am
@@ -1,94 +1,4 @@
 installdir = $(pkgdatadir)/skin_default/icons
 
-dist_install_DATA = \
-	ask.png \
-	az.png \
-	clock.png \
-	dish.png \
-	dish_scan.png \
-	dmm_logo.png \
-	epgclock_add.png \
-	epgclock.png \
-	epgclock_post.png \
-	epgclock_pre.png \
-	epgclock_prepost.png \
-	faz.png \
-	folder.png \
-	fza.png \
-	ico_mp_forward.png \
-	ico_mp_pause.png \
-	ico_mp_play.png \
-	ico_mp_rewind.png \
-	ico_mp_stop.png \
-	icon_crypt.png \
-	icon_dolby.png \
-	icon_event.png \
-	icon_format.png \
-	icon_rec_off.png \
-	icon_rec.png \
-	icons_off.png \
-	icon_txt.png \
-	icon_view.png \
-	input_error.png \
-	input_info.png \
-	input_keyboard-configured.png \
-	input_keyboard.png \
-	input_mouse-configured.png \
-	input_mouse.png \
-	input_question.png \
-	input_rcnew-configured.png \
-	input_rcnew.png \
-	input_rcold-configured.png \
-	input_rcold.png \
-	lock_error.png \
-	lock_off.png \
-	lock_on.png \
-	lock.png \
-	lockBouquet.png \
-	loop.png \
-	marker.png \
-	mp_buttons.png \
-	movie_play.png \
-	movie_play_rec.png \
-	movielist.png \
-	newtop.png \
-	oldtop.png \
-	part_0_4.png \
-	part_1_4.png \
-	part_2_4.png \
-	part_3_4.png \
-	part_4_4.png \
-	part_new.png \
-	part_unwatched.png \
-	pause.png \
-	playlist.png \
-	playlistquit.png \
-	plilogo-fs8.png \
-	quit.png \
-	network_wired.png \
-	network_wired-active.png \
-	network_wired-inactive.png \
-	network_wireless.png \
-	network_wireless-active.png \
-	network_wireless-inactive.png \
-	plugin.png \
-	rass_logo.png \
-	rass_page1.png \
-	rass_page2.png \
-	rass_page3.png \
-	rass_page4.png \
-	record.png \
-	redx.png \
-	repeat_off.png \
-	repeat_on.png \
-	scan-c.png \
-	scan-s.png \
-	scan-t.png \
-	selectioncross.png \
-	shuffle.png \
-	timer_done.png  timer_prep.png  timer_rep.png   timer_zap.png \
-	timer_off.png   timer_rec.png   timer_wait.png  timer_failed.png \
-	trashcan.png \
-	unlock.png \
-	unlockBouquet.png \
-	za.png
+dist_install_DATA = *.png
+
