--- a/configure.ac
+++ b/configure.ac
@@ -242,6 +242,8 @@ data/skin_default/icons/Makefile
 data/skin_default/buttons/Makefile
 data/skin_default/spinner/Makefile
 data/skin_default/GraphEPG/Makefile
+data/skin_default/lcd/Makefile
+data/skin_default/piconbg/Makefile
 include/Makefile
 lib/Makefile
 lib/base/eenv.cpp
