Fixed EtPortal 	modified:   ../../Plugins/Extensions/EtPortal/Makefile.am 	new file:   ../../Plugins/Extensions/EtPortal/m2k.png 	new file:   ../../Plugins/Extensions/EtPortal/m2ks.png 	new file:   ../../Plugins/Extensions/EtPortal/putpat.png 	new file:   ../../Plugins/Extensions/EtPortal/songs.png

--- a/lib/python/Plugins/Extensions/EtPortal/Makefile.am
+++ b/lib/python/Plugins/Extensions/EtPortal/Makefile.am
@@ -36,4 +36,9 @@ dist_install_DATA = \
 	timer.png \
 	weblinks.png \
 	webmedia.png \
-	wetter.png
+	wetter.png \
+	1channel.png \
+	m2k.png \
+	m2ks.png \
+	putpat.png \
+	songs.png
