[TM2T] add 2T machine type to config.

--- a/configure.ac
+++ b/configure.ac
@@ -67,6 +67,7 @@ AM_CONDITIONAL(ET6X00, test "$BOXTYPE" == et6x00)
 AM_CONDITIONAL(ET9X00, test "$BOXTYPE" == et9x00)
 AM_CONDITIONAL(ODINM9, test "$BOXTYPE" == odinm9)
 AM_CONDITIONAL(TMTWIN, test "$BOXTYPE" == tmtwin)
+AM_CONDITIONAL(TM2T, test "$BOXTYPE" == tm2t)
 AM_CONDITIONAL(GB800SOLO, test "$BOXTYPE" == gb800solo)
 AM_CONDITIONAL(GB800SE, test "$BOXTYPE" == gb800se)
 AM_CONDITIONAL(GB800UE, test "$BOXTYPE" == gb800ue)
