--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -18,16 +18,18 @@ dist_pkgdata_DATA = \
 
 if HAVE_TEXTLCD
 dist_pkgdata_DATA += skin_text.xml
-else
+endif
+
 if HAVE_COLORLCD
 dist_pkgdata_DATA += skin_display96.xml
-else
-if HAVE_GIGABLUELCD
-SUBDIRS += lcd_large
+endif
+
+if HAVE_LCD220
+SUBDIRS += lcd220
 dist_pkgdata_DATA += skin_display220_picon.xml skin_display220_no_picon.xml
-else
-SUBDIRS += lcd_small
-dist_pkgdata_DATA += skin_display_picon.xml skin_display_no_picon.xml
 endif
-endif
+
+if HAVE_LCD255
+SUBDIRS += lcd255
+dist_pkgdata_DATA += skin_display255_picon.xml skin_display255_no_picon.xml
 endif
