[lcd_displays] more lcd skin tweaks, vu ultimo skin is now called 'skin_display255_no_picon.xml' or 'skin_display255_picon.xml', so sure you rename your custom skins you have in /etc/engima2 if you use them.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -24,12 +24,12 @@ if HAVE_COLORLCD
 dist_pkgdata_DATA += skin_display96.xml
 endif
 
-if HAVE_LCD220
+if HAVE_COLORLCD220
 SUBDIRS += lcd220
 dist_pkgdata_DATA += skin_display220_picon.xml skin_display220_no_picon.xml
 endif
 
-if HAVE_LCD255
+if HAVE_BWLCD255
 SUBDIRS += lcd255
 dist_pkgdata_DATA += skin_display255_picon.xml skin_display255_no_picon.xml
 endif
