--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -12,6 +12,7 @@ dist_pkgdata_DATA = \
 	skin_subtitles.xml \
 	skin.xml \
 	startwizard.xml \
+	userinterfacepositionerwizard.xml \
 	freesat.t1 \
 	freesat.t2 \
 	unicable.xml
