--- a/lib/python/Screens/Makefile.am
+++ b/lib/python/Screens/Makefile.am
@@ -1,7 +1,8 @@
 installdir = $(pkglibdir)/python/Screens
 
 install_PYTHON = \
-	Recordings.py Timershift.py LogManager.py CCcamInfo.py OScamInfo.py SkinSelector.py OSD.py \
+	Recordings.py Timershift.py LogManager.py CCcamInfo.py OScamInfo.py SkinSelector.py \
+	UserInterfacePostioner.py WizardUserInterfacePostioner.py \
 	\
 	AudioSelection.py ChannelSelection.py ClockDisplay.py ConfigMenu.py CopyFiles.py InfoBar.py \
 	Menu.py	MessageBox.py Screen.py ServiceScan.py TimerEdit.py \
