--- a/lib/python/Plugins/SystemPlugins/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/Makefile.am
@@ -11,7 +11,7 @@ if XTREND
 SUBDIRS += SatelliteEquipmentControl DiseqcTester
 endif
 
-if ODIN
+if MARA
 SUBDIRS += SatelliteEquipmentControl DiseqcTester
 endif
 
