--- a/data/rc_models/Makefile.am
+++ b/data/rc_models/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS = et4x00 et6x00 et6500 et9x00 et9500 vu vu2 tm gb ini3000 ini5000 ini7000 mara xp1000
+SUBDIRS = dmm0 dmm1 dmm2 et4x00 et6x00 et6500 et9x00 et9500 gb ini3000 ini5000 ini7000 mara tm vu vu2 xp1000
