--- a/lib/python/Screens/Makefile.am
+++ b/lib/python/Screens/Makefile.am
@@ -2,7 +2,7 @@ installdir = $(pkglibdir)/python/Screens
 
 install_PYTHON = \
 	Recordings.py Timershift.py LogManager.py CCcamInfo.py OScamInfo.py SkinSelector.py \
-	UserInterfacePositioner.py WizardUserInterfacePositioner.py PowerManagerTimerEntry.py PowerManagerTimerEdit.py \
+	UserInterfacePositioner.py WizardUserInterfacePositioner.py PowerTimerEntry.py PowerTimerEdit.py \
 	\
 	AudioSelection.py ChannelSelection.py ClockDisplay.py ConfigMenu.py CopyFiles.py InfoBar.py \
 	Menu.py	MessageBox.py Screen.py ServiceScan.py TimerEdit.py \
