--- a/data/countries/Makefile.am
+++ b/data/countries/Makefile.am
@@ -1,40 +1,41 @@
 installdir = $(pkgdatadir)/countries
 
 dist_install_DATA = \
-	ad.png \
-	ae.png \
-	bg.png \
-	br.png \
-	cz.png \
-	de.png \
-	dk.png \
-	en.png \
-	es.png \
-	ee.png \
-	fi.png \
-	fr.png \
-	gb.png \
-	gr.png \
-	hr.png \
-	hu.png \
-	il.png \
-	ir.png \
-	is.png \
-	it.png \
-	lt.png \
-	lv.png \
-	missing.png \
-	nl.png \
-	no.png \
-	pl.png \
-	pt.png \
-	ro.png \
-	ru.png \
-	se.png \
-	si.png \
-	sk.png \
-	th.png \
-	tr.png \
-	ua.png \
+	ar_AE.png \
+	bg_BG.png \
+	ca_AD.png \
+	cs_CZ.png \
+	da_DK.png \
+	de_DE.png \
+	el_GR.png \
+	en_GB.png \
+	en_US.png \
+	es_ES.png \
+	et_EE.png \
+	fa_IR.png \
+	fi_FI.png \
+	fr_FR.png \
 	fy_NL.png \
-	yu.png
+	he_IL.png \
+	hr_HR.png \
+	hu_HU.png \
+	is_IS.png \
+	it_IT.png \
+	lt_LT.png \
+	lv_LV.png \
+	missing.png \
+	nb_NO.png \
+	nl_NL.png \
+	no_NO.png \
+	pl_PL.png \
+	pt_BR.png \
+	pt_PT.png \
+	ro_RO.png \
+	ru_RU.png \
+	sk_SK.png \
+	sl_SI.png \
+	sr_YU.png \
+	sv_SE.png \
+	th_TH.png \
+	tr_TR.png \
+	uk_UA.png
